# admincontroller/controller.go
@@ -17,10 +17,16 @@ type DeleteRequestBody struct{
 	Name string `json:name "binding":"required"`
 }
 
+type OrderStatusBody struct {
+	Id string `json:"id" bson: "_id"`
+	Status string `json:"status"`
+}
+
 func NewController(mongo *model.Model) (*Controller, error){
 	r := &Controller{mongoDb: mongo}
 	return r, nil
 }
+
 
 
 // Post
@@ -38,8 +44,13 @@ func (ctl *Controller) AddCategory(c *gin.Context){
 	   c.JSON(http.StatusBadRequest, gin.H{"result":false})
 	   return
    }
-   ctl.mongoDb.AddCategory(requestBody)
-   c.JSON(http.StatusOK, gin.H{"result":true})
+   result, err := ctl.mongoDb.AddCategory(requestBody)
+   if err != nil {
+	c.JSON(http.StatusOK, gin.H{"result":result})
+	return
+   }
+   c.JSON(http.StatusOK, gin.H{"result":result})
+   
 }
 
 
@@ -93,6 +104,31 @@ func (ctl *Controller) DeleteCategory(c *gin.Context){
 	c.JSON(http.StatusOK, gin.H{"result":result})
  }
  
+
+
+
+// statusUpdate godoc
+// @Summary update a status in order
+// @Description 피자주문정보에서 주문접수, 조리, 배달완료 등 상태를 update하는 API
+// @Accept  json
+// @Produce  json
+// @Param OrderStatusBody body OrderStatusBody true "update a status in order"
+// @Router /admin/order/update [post]s
+ func(ctl *Controller) UpdateOrderStatus(c *gin.Context){
+    var requestBody OrderStatusBody
+	if err := c.ShouldBind(&requestBody); err != nil {
+		fmt.Println(err)
+		c.JSON(http.StatusBadRequest, gin.H{"result":false})
+		return
+	}
+
+	result, resultErr := ctl.mongoDb.UpdateOrderStatus(requestBody.Id, requestBody.Status)
+	if resultErr != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"result":false})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{"update_result":result})
+ }
 
 
 // GetOk godoc
